--- a/index1.html
+++ b/index1.html
@@ -1,3 +1,3 @@
 <h1> this is for QA<h1>
-<h1> this is my app </h1>
-<h1> created by Sonal</h1>
+<h1> this is my app1 </h1>
+<h1> created by Sonal Mittal</h1>
